--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
         <div class="row">
           <div class="col-lg-6">
             <br>
-            <img src="assets/img/coco/v1-crop.jpg" class="img-fluid" alt="">
+            <img src="assets/img/coco/v1-crop.JPG" class="img-fluid" alt="">
           </div>
           <div class="col-lg-6 pt-4 pt-lg-0">
             <br>
