--- a/index.html
+++ b/index.html
@@ -358,7 +358,7 @@ A focal impetus behind the Network Neuroscience approach is that it provides a f
                   
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
             <div class="member">
-              <img src="assets/img/yifan-zhang.jpeg" alt="">
+              <img src="assets/img/yifan-zhang.jpg" alt="">
               <h4>Artwork by Yifan (Coco) Zhang</h4>
               <span>University of Calgary</span>
               <p>
