--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@ A focal impetus behind the Network Neuroscience approach is that it provides a f
 
         <div class="section-title">
           <h2>Call for Contributions</h2>
-          <p>You are invited to submit your talk and/or poster by June 20th 11:59pm Anywhere on Earth. Submissions should be in the format of a one-page pdf with one figure. 
+          <p>You are invited to submit your talk and/or poster by June 23rd 11:59pm Anywhere on Earth. Submissions should be in the format of a one-page pdf with one figure. 
 
 <br>
           Themes in the Network Neuroscience remit include, but are not limited to: (i) Interactome networks; (ii) Transcriptional and gene regulation networks; (iii) Structural brain networks (imaging); (iv) Functional brain networks (imaging); (v) Brain networks – theory, modeling and analysis; (vi) Signal processing and information flow; (vii) Circuit dynamics; (viii) Brain-behavior interactions; (ix) Systems neuroscience. All themes apply to any species.</p>
@@ -150,7 +150,7 @@ A focal impetus behind the Network Neuroscience approach is that it provides a f
 
               <div class="portfolio-info">
                 <h4><a href="https://easychair.org/conferences/?conf=nn2022">Submit</a></h4>
-                <p>DEADLINE: June 20th 11:59pm AOE</p>
+                <p>DEADLINE: June 23rd 11:59pm AOE</p>
               </div>
             </div>
           </div>
