--- a/index.html
+++ b/index.html
@@ -256,24 +256,24 @@ A focal impetus behind the Network Neuroscience approach is that it provides a f
           <p>Coming Soon</p>
         </div>
 
-<!--
+
         <div class="row">
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
             <div class="member">
-              <img src="assets/img/team/team-1.jpg" alt="">
-              <h4>Walter White</h4>
-              <span>Chief Executive Officer</span>
+              <img src="assets/img/sarah-morgan.jpg" alt="">
+              <h4>Sarah Morgan</h4>
+              <span>Accelerate Science Research Fellow</span>
               <p>
-                Magni qui quod omnis unde et eos fuga et exercitationem. Odio veritatis perspiciatis quaerat qui aut aut aut
+                 Cambridge University
               </p>
               <div class="social">
-                <a href=""><i class="bi bi-twitter"></i></a>
-                <a href=""><i class="bi bi-facebook"></i></a>
-                <a href=""><i class="bi bi-instagram"></i></a>
-                <a href=""><i class="bi bi-linkedin"></i></a>
+                <a href="https://twitter.com/sarah_morgan_uk"><i class="bi bi-twitter"></i></a>
+                <a href="https://semorgan.org/"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
+
+          <!--
 
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
             <div class="member">
