--- a/index.html
+++ b/index.html
@@ -273,6 +273,22 @@ A focal impetus behind the Network Neuroscience approach is that it provides a f
             </div>
           </div>
 
+
+          <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
+            <div class="member">
+              <img src="assets/img/Bratislav_Misic_Photo_2.jpg" alt="">
+              <h4>Bratislav Misic</h4>
+              <span>Associate Professor & Canada Research Chair</span>
+              <p>
+                 Montreal Neurological Institute, McGill University
+              </p>
+              <div class="social">
+                <a href="https://twitter.com/misicbata"><i class="bi bi-twitter"></i></a>
+                <a href="https://netneurolab.github.io/"><i class="bx bx-link"></i></a>
+              </div>
+            </div>
+          
+
           <!--
 
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
