--- a/index.html
+++ b/index.html
@@ -287,6 +287,24 @@ A focal impetus behind the Network Neuroscience approach is that it provides a f
                 <a href="https://netneurolab.github.io/"><i class="bx bx-link"></i></a>
               </div>
             </div>
+            </div>
+
+
+
+            <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
+            <div class="member">
+              <img src="assets/img/KanikaBansal.jpg" alt="">
+              <h4>Kanika Bansal</h4>
+              <span>Senior Fellow</span>
+              <p>
+                 US DEVCOM Army Research Laboratory
+              </p>
+              <div class="social">
+                <a href="https://twitter.com/kanibansal"><i class="bi bi-twitter"></i></a>
+                <a href="https://sites.google.com/view/kanikabansal"><i class="bx bx-link"></i></a>
+              </div>
+            </div>
+            </div>
           
 
           <!--
