--- a/index.html
+++ b/index.html
@@ -134,7 +134,15 @@ A focal impetus behind the Network Neuroscience approach is that it provides a f
           <p>You are invited to submit your talk and/or poster by June 30th 11:59pm Anywhere on Earth. Submissions should be in the format of a one-page pdf with one figure. 
 
 <br>
-          Themes in the Network Neuroscience remit include, but are not limited to: (i) Interactome networks; (ii) Transcriptional and gene regulation networks; (iii) Structural brain networks (imaging); (iv) Functional brain networks (imaging); (v) Brain networks – theory, modeling and analysis; (vi) Signal processing and information flow; (vii) Circuit dynamics; (viii) Brain-behavior interactions; (ix) Systems neuroscience. All themes apply to any species.</p>
+          Themes in the Network Neuroscience remit include, but are not limited to: (i) Interactome networks; (ii) Transcriptional and gene regulation networks; (iii) Structural brain networks (imaging); (iv) Functional brain networks (imaging); (v) Brain networks – theory, modeling and analysis; (vi) Signal processing and information flow; (vii) Circuit dynamics; (viii) Brain-behavior interactions; (ix) Systems neuroscience. All themes apply to any species.
+
+          <br>
+          <br>
+
+          Submissions are now closed, but last minute submissions may be accepted on a rolling basis as a POSTER ONLY. Submissions received after July 8th will not be considered.
+
+
+        </p>
         </div>
 
 
@@ -150,7 +158,7 @@ A focal impetus behind the Network Neuroscience approach is that it provides a f
 
               <div class="portfolio-info">
                 <h4><a href="https://easychair.org/conferences/?conf=nn2022">Submit</a></h4>
-                <p>DEADLINE EXTENDED: June 30th 11:59pm AOE</p>
+                <p>POSTER ONLY: July 8th 11:59pm AOE</p>
               </div>
             </div>
           </div>
@@ -236,7 +244,10 @@ A focal impetus behind the Network Neuroscience approach is that it provides a f
 
         <div class="section-title">
           <h2>Registration</h2>
-          <p>Coming Soon
+          <p>Network Neuroscience is a satellite of the main NetSci conference. You can register for Network Neuroscience through the NetSci website - select "Satellites & School Only" if you only wish to attend Network Neuroscience and other satellites. The $30 USD registration fee will grant you access to all of the NetSci affiliated satellites, including Network Neuroscience. You will also be granted access to Network Neurocience if you register for the whole NetSci conference.
+<br><br>
+<a href="https://netsci2022.net/registration.aspx">Register here</a>
+            
             
           </p>
 
