--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@ A focal impetus behind the Network Neuroscience approach is that it provides a f
 2:30:  <b> Christopher Hayward</b>, Siyu Huo, Xue Chen and Marcus Kaiser.<br><i>Non-optimal component placement of the human connectome supports variable brain dynamics</i> <br>
 2:45:  <b> Gorka Zamora-López</b>, Rajanikant Panda, Ane López-González, Jitka Annen and Matthieu Gilson.<br><i>Propagation-response analysis reveal the disruption of integrative and broadcasting networks in pathological loss of consciousness</i> <br><br> </p>
 <p style="background-color:#DCDCDC">
-3:00:  <b>Bratislav Misic</b> <br>
+3:00:  <b>Bratislav Misic</b> <br><i>Learning in connectome-based artificial neural networks</i>
 </p><br>
 3:30:  Poster session <br><br>
 4pm GMT: Closing
@@ -456,6 +456,38 @@ A focal impetus behind the Network Neuroscience approach is that it provides a f
               </div>
             </div>
           </div>
+
+          <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
+            <div class="member">
+              <img src="assets/img/katja-neuer.png" alt="">
+              <h4>Posterwall by Katja Neuer</h4>
+              <span>Max Planck Institute for Human Cognitive and Brain Sciences</span>
+              <p>
+                
+              </p>
+              <div class="social">
+                <a href="https://twitter.com/katjaQheuer"><i class="bi bi-twitter"></i></a>
+                <a href="https://neuroanatomy.github.io/people.html"><i class="bx bx-link"></i></a>
+              </div>
+            </div>
+          </div>
+
+           <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
+            <div class="member">
+              <img src="assets/img/roberto-toro.png" alt="">
+              <h4>Posterwall by Roberto Toro</h4>
+              <span>Institut Pasteur</span>
+              <p>
+                
+              </p>
+              <div class="social">
+                <a href="https://twitter.com/R3RT0/"><i class="bi bi-twitter"></i></a>
+                <a href="https://neuroanatomy.github.io/people.html"><i class="bx bx-link"></i></a>
+              </div>
+            </div>
+          </div>
+
+
 
         </div>
 
