--- a/index.html
+++ b/index.html
@@ -191,12 +191,12 @@ A focal impetus behind the Network Neuroscience approach is that it provides a f
 12:30: <b> Lidia Ripoll Sánchez</b>, Jan Watteyne, Haosheng Sun, Robert W. Fernandez, Seth R. Taylor, Alexis Weinreb, Marc Hammarlund, David M. Miller III, Oliver Hobert, Isabel Beets, Petra E. Vértes and William R. Schafer.<br><i>Building the neuropeptidergic connectome of Caenorhabditis elegans</i><br>
 12:45: <b> Alberto Cacciola</b>, Gianpaolo Basile, Demetrio Milardi, and Giuseppe Anastasi.<br><i>Topological organization of the human cerebellum network </i><br><br> </p>
 <p style="background-color:#DCDCDC">
-1:00:  <b>Sarah Morgan</b> <br>
+1:00:  <b>Sarah Morgan</b> <br><i>New network approaches to brain MRI and speech data</i>
 </p><br>
 1:30:  <b> Hanran Luna Li</b>, Luoyao Pang, Kun Chen, Dean Mobbs, and Haiyan Wu. <i> <br> The changing brain: alterations in resting state functional connectivity after switching moral decisions</i><br> 
 1:45:  <b> Xining Chen</b>, Abigail Giancola, Sophia Tchir, Lisa Feldman-Barrett, Joseph Andreano, and Emma Towlson.<br><i>Functional brain network connectivity changes with ovarian hormone levels</i> <br><br>
 <p style="background-color:#DCDCDC">
-2:00:  <b>Kanika Bansal</b> <br> </p>
+2:00:  <b>Kanika Bansal</b> <br><i>Can network neuroscience approaches help personalize therapeutics? </i></p>
 <p><br>
 2:30:  <b> Christopher Hayward</b>, Siyu Huo, Xue Chen and Marcus Kaiser.<br><i>Non-optimal component placement of the human connectome supports variable brain dynamics</i> <br>
 2:45:  <b> Gorka Zamora-López</b>, Rajanikant Panda, Ane López-González, Jitka Annen and Matthieu Gilson.<br><i>Propagation-response analysis reveal the disruption of integrative and broadcasting networks in pathological loss of consciousness</i> <br><br> </p>
