add link to poster wall

--- a/index.html
+++ b/index.html
@@ -208,7 +208,10 @@ A focal impetus behind the Network Neuroscience approach is that it provides a f
 <p style="background-color:#DCDCDC">
 3:00:  <a href="misic.html"><b>Bratislav Misic</b> <br><i>Learning in connectome-based artificial neural networks</i></a>
 </p><br>
-3:30:  Poster session <br><br>
+3:30:  Poster session <br>
+Join us on the <a href="https://netneurosci.github.io/networks2022satellite/#landinggraph" target="_blank">Network Neuroscience 2022 poster wall</a>. By signing in with GitHub, you can join our community of network neuroscience enthudsiasts, and see and use the global chat on the posterwall. Scrolling down, you find an alphabetic list of this year's posters and clicking them will bring you to the poster with the little camera icon to join the video chat room of this poster. Green icons means someone is connected, and the little number indicates how many people are connected to each room.<br />
+If you only want to join the poster session, you can take the shortcut <a href="https://netneurosci.github.io/networks2022satellite/posterwall/#zoom=1&x=0.5&y=0.18460358469239463" target="_blank">directly to the posterwall.</a>
+<br><br>
 4pm GMT: Closing
 
           </p>
