add link to poster wall to menu

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
               </li> -->
               <li><a href="#contact">Contact</a></li>
               <li><a href="https://direct.mit.edu/netn">Journal</a></li>
-              <li><a href="poster.html">Poster Session</a></li>
+              <li><a href="https://netneurosci.github.io/networks2022satellite/posterwall/#zoom=1&x=0.5&y=0.18460358469239463">Poster Session</a></li>
               <li><a href="history.html">History</a></li>
               <li><a href="https://netsci2022.net/">NetSci 2022</a></li>
             </ul>
