--- a/history.html
+++ b/history.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Network Neuroscience 2022</title>
+  <title>Network Neuroscience 2023</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -68,7 +68,7 @@
               <li><a href="https://direct.mit.edu/netn">Journal</a></li>
               <li><a href="poster.html">Poster Session</a></li>
               <li><a href="history.html">History</a></li>
-              <li><a href="https://netsci2022.net/">NetSci 2022</a></li>
+              <li><a href="https://netsci2023.wixsite.com/netsci2023">NetSci 2023</a></li>
             </ul>
           </li>
           
@@ -109,12 +109,12 @@
           <p>
             <br>
             <br>
-            Our Network Neuroscience satellite is now entering its 8th year, and has consistently proven to be one of the most well attended NetSci satellites. The first Brain Networks satellite was held at NetSci 2015 in Zaragoza, Spain. After two successful years, the satellite was expanded and rebranded in 2017 in Indiana, USA, to fully encompass the broader field of Network Neuroscience. An estimated 120 participants consistently attended (and about 150 unique registrants joined over the course of the whole day). As the satellite has grown, additional activities have helped to increase its presence at the conference. At NetSci 2018 in Paris, France and NetSci 2019 in Vermont, USA, we held a hackathon, Brainhack Networks, for students from a variety of disciplines. There have also been dedicated lectures for Network Neuroscience in the International School.
+            Our Network Neuroscience satellite is now entering its 9th year, and has consistently proven to be one of the most well attended NetSci satellites. The first Brain Networks satellite was held at NetSci 2015 in Zaragoza, Spain. After two successful years, the satellite was expanded and rebranded in 2017 in Indiana, USA, to fully encompass the broader field of Network Neuroscience. An estimated 120 participants consistently attended (and about 150 unique registrants joined over the course of the whole day). As the satellite has grown, additional activities have helped to increase its presence at the conference. At NetSci 2018 in Paris, France and NetSci 2019 in Vermont, USA, we held a hackathon, Brainhack Networks, for students from a variety of disciplines. There have also been dedicated lectures for Network Neuroscience in the International School.
 
             <br>
             <br>
 
-            In the years 2020-21, we, and the whole scientific community, pivoted to online meetings. We fully embraced this format and the opportunities it provided to increase accessibility, diversity, and inclusion. In 2021, we held two half-day sessions at non-overlapping times to ensure different timezones had an equitable chance at attending during reasonable hours. We employed creative ways to connect the community, including inviting participants to add themselves to a network of researchers on our website, and an online poster wall that simulated a poster session with zoom rooms to talk with the more than 50 poster presenters. A record of >170 participants registered for the Network Neuroscience satellite. We are well poised to make maximal use of our experiences from the past two years to run an innovative, engaging, and equitable online conference in 2022.
+            In the years 2020-21, we, and the whole scientific community, pivoted to online meetings. We fully embraced this format and the opportunities it provided to increase accessibility, diversity, and inclusion. In 2021, we held two half-day sessions at non-overlapping times to ensure different timezones had an equitable chance at attending during reasonable hours. We employed creative ways to connect the community, including inviting participants to add themselves to a network of researchers on our website, and an online poster wall that simulated a poster session with zoom rooms to talk with the more than 50 poster presenters. A record of >170 participants registered for the Network Neuroscience satellite. In 2022, we were well poised to make maximal use of our experiences from the past two years to run an innovative, engaging, and equitable online conference. In 2023 we are back to in person conference. 
 
             <br>
             <br>
@@ -123,6 +123,7 @@
             Legacy material that is still live:
             <br>
             <br>
+	     <b><a href="http://networkneuroscience.github.io/index_2022.html">NetNeuroSci 2022</a></b>
             <b><a href="https://netneurosci.github.io/networks2021satellite/">Network Neuroscience 2021</a></b> <br>
             <b><a href="https://www.facebook.com/netsci2017.net/">Network Neuroscience 2017 Facebook Live</a></b>
 
