--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <ul>
           <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
           <li><a class="nav-link scrollto" href="#about">About</a></li>
-          <li><a class="nav-link scrollto" href="#portfolio">Calls</a></li>
+          <li><a class="nav-link scrollto" href="#portfolio">Submit</a></li>
           <li><a class="nav-link scrollto " href="#services">Schedule</a></li>
           <li><a class="nav-link scrollto" href="#team">Speakers</a></li>
           <li><a class="nav-link scrollto" href="#register">Register</a></li>
