--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
         <ul>
           <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
           <li><a class="nav-link scrollto" href="#about">About</a></li>
-          <li><a class="nav-link scrollto" href="#portfolio">Submit</a></li>
-          <li><a class="nav-link scrollto " href="#services">Schedule</a></li>
+          <li><a class="nav-link scrollto" href="#CallForContribution">Submit</a></li>
+          <li><a class="nav-link scrollto " href="#schedule">Schedule</a></li>
           <li><a class="nav-link scrollto" href="#team">Speakers</a></li>
           <li><a class="nav-link scrollto" href="#register">Register</a></li>
           <li class="dropdown"><a href="#"><span>Community</span> <i class="bi bi-chevron-down"></i></a>
@@ -128,7 +128,7 @@ A focal impetus behind the Network Neuroscience approach is that it provides a f
     </section><!-- End About Section -->
 
         <!-- ======= Portfolio Section ======= -->
-    <section id="portfolio" class="portfolio">
+    <section id="CallForContribution" class="portfolio">
       <div class="container">
 
         <div class="section-title">
@@ -176,7 +176,7 @@ A focal impetus behind the Network Neuroscience approach is that it provides a f
     
 
     <!-- ======= Services Section ======= -->
-    <section id="services" class="services section-bg">
+    <section id="schedule" class="services section-bg">
       <div class="container">
 
         <div class="section-title">
