--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
           <li><a class="nav-link scrollto" href="#about">About</a></li>
           <li><a class="nav-link scrollto" href="#CallForContribution">Submit</a></li>
           <li><a class="nav-link scrollto " href="#schedule">Schedule</a></li>
-          <li><a class="nav-link scrollto" href="#team">Speakers</a></li>
+          <li><a class="nav-link scrollto" href="#speakers">Speakers</a></li>
           <li><a class="nav-link scrollto" href="#register">Register</a></li>
           <li class="dropdown"><a href="#"><span>Community</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
@@ -175,7 +175,7 @@ A focal impetus behind the Network Neuroscience approach is that it provides a f
 
     
 
-    <!-- ======= Services Section ======= -->
+    <!-- ======= Services / Schedule Section ======= -->
     <section id="schedule" class="services section-bg">
       <div class="container">
 
@@ -266,8 +266,8 @@ the 10th or 11th of July (TBC).
 
 
 
-    <!-- ======= Team Section ======= -->
-    <section id="team" class="team">
+    <!-- ======= Speakers Section ======= -->
+    <section id="speakers" class="team">
       <div class="container">
 
         <div class="section-title">
