--- a/index.html
+++ b/index.html
@@ -112,11 +112,9 @@
             <br>
             <h3>About</h3>
             <p>
-               <!-- The brain represents a complex system that is inherently multiscale and multivariate, and comprises a hierarchy defined by interconnectedness linking brain structure, function, and cognition. The use of various methods, from multimodal imaging techniques to model simulations, has led to discoveries that uncover brain processes at the macroscale, mesoscale, and microscale. More importantly, topics including network topology, network dynamics, control theory, and computational modelling, strongly complement traditional neuroscientific studies. With the study of the brain at various scales, Network Neuroscience has emerged as a field encompassing multiple disciplines.-->
-
-A focal impetus behind the Network Neuroscience approach is that it provides a framework for interpreting the brain as an interconnected system. This approach offers quantitatively different maps of the brain where networks, consisting of nodes (e.g., genes, neurons or brain regions) and links (e.g., interactions, synaptic, anatomical or functional connections) are endowed with topological properties. It also provides a novel framework for studying fundamental aspects of brain organization including its complexity at all spatiotemporal scales. In particular, a Network Neuroscience approach permits structural and anatomical analyses of the brain from the molecular, to the neuronal, to the macroscopic and behavioral scales. Critical to the development of Network Neuroscience is the necessity of a forum to discuss and understand the brain at these various levels. Moreover, such a forum also codifies and facilitates more cross-disciplinary communication critical to the advancement of scientific discovery. To be inclusive of the wide range of researchers this satellite is targeting, but also to reflect emerging topics, we propose four core areas, which should be seen only as guidelines for inviting submissions and structuring the program. These include methodology (i) Spatio-temporal and dynamic brain networks; (ii) Classical and Deep Machine Learning on brain networks and more applied work (iii) Fundamental and clinical neuroscience applications;  (iv) Brain-body networks. 
-
-</p>  
+              <!-- The brain represents a complex system that is inherently multiscale and multivariate, and comprises a hierarchy defined by interconnectedness linking brain structure, function, and cognition. The use of various methods, from multimodal imaging techniques to model simulations, has led to discoveries that uncover brain processes at the macroscale, mesoscale, and microscale. More importantly, topics including network topology, network dynamics, control theory, and computational modelling, strongly complement traditional neuroscientific studies. With the study of the brain at various scales, Network Neuroscience has emerged as a field encompassing multiple disciplines.-->
+              Along with ever-improving brain data acquisition techniques across species and modalities, the parallel trend towards open science means that the past few years have seen ever-increasing dataset sizes, from hundreds to thousands to tens of thousands of individuals. Coupled with rich behavioural, molecular, and clinical data, and increased availability of data from the rest of the body, this means that <strong>placing the brain within a context of complex systems and network science</strong> offers an appealing conceptual framework to modelling these elements and their interaction. Methodological developments in network science and increased understanding of brain structure and function in neuroscience have also influenced each other, enabling new discoveries in both fields.</p>
+            <p>&nbsp;This satellite will provide an opportunity for participants with diverse backgrounds to present cutting-edge research, discuss latest network findings and exchange ideas. </p>
           </div>
 
 
@@ -181,16 +179,63 @@ A focal impetus behind the Network Neuroscience approach is that it provides a f
 
         <div class="section-title">
           <h2>Schedule</h2>
-          <p>
-            Network Neuroscience 2023 will be held in Wien. The one-day satellite will take place on site on
-the 10th or 11th of July (TBC).
-            <br>
-            <br>
-            Welcoming remarks <br><br>
-          </p>
-          <p style="background-color:#DCDCDC">
+          <p> Network Neuroscience 2023 will be held in Wien, as a satellite of the Network Science conference. The one-day satellite will take place on site on
+the 10th or 11th of July (TBC).&nbsp;&nbsp;The tentative schedule will be as follows:</p>
+          <p>&nbsp;</p>
+<table width="80%" border="1" align="center">
+  <tbody>
+    <tr>
+      <th scope="col" width="30%">Time</th>
+      <th scope="col" align="left">Event</th>
+    </tr>
+    <tr>
+      <td>9:00-9:05</td>
+      <td>Opening and welcome remarks </td>
+    </tr>
+	  <tr>
+      <td>9:05-10:30</td>
+      <td>Session1:&nbsp;Spatio-temporal and dynamic brain networks </td>
+    </tr>
+    <tr>
+      <td>10:30-11:00</td>
+      <td>Coffee break</td>
+    </tr>
+    <tr>
+      <td>11:00-12:15</td>
+      <td>Session 2: Fundamental and clinical neuroscience applications</td>
+    </tr>
+    <tr>
+      <td>12:15-14:00</td>
+      <td>Lunch break + posters</td>
+    </tr>
+    <tr>
+      <td>14:00-15:30</td>
+      <td>Session 3: Classical and Deep Machine Learning on brain networks</td>
+    </tr>
+    <tr>
+      <td>15:30-16:00</td>
+      <td>Coffee break</td>
+    </tr>
+    <tr>
+      <td>16:00-17:25</td>
+      <td>Session 4: Brain-body networks</td>
+    </tr>
+    <tr>
+      <td>17:25-17:30</td>
+      <td>Final remarks</td>
+    </tr>
+    <tr>
+      <td>17:30-18:30</td>
+      <td>Poster session</td>
+    </tr>
+  </tbody>
+</table>
+			
+			<p>Each session will include an invited long talk and several contributed short talks, as well as a panel discussion</p>
+			<br/>
+<p style="background-color:#DCDCDC">
 
-	    The Schedule will be announced later. 
+	    The exact schedule will be announced after submissions are reviewed. 
 	    
           </p>
 
