--- a/index.html
+++ b/index.html
@@ -131,18 +131,31 @@
 
         <div class="section-title">
           <h2>Call for Contributions</h2>
-          <p>You are invited to submit your talk and/or poster by XXX Anywhere on Earth. Submissions should be in the format of a one-page pdf with one figure. 
-
-<br>
-          Themes in the Network Neuroscience remit include, but are not limited to: (i) Interactome networks; (ii) Transcriptional and gene regulation networks; (iii) Structural brain networks (imaging); (iv) Functional brain networks (imaging); (v) Brain networks – theory, modeling and analysis; (vi) Signal processing and information flow; (vii) Circuit dynamics; (viii) Brain-behavior interactions; (ix) Systems neuroscience; (x) Brain-body networks. All themes apply to any species.
-
-          <br>
-          <br>
-
-         <!-- Submissions are now closed, but last minute submissions may be accepted on a rolling basis as a POSTER ONLY. Submissions received after July 8th will not be considered.--> 
-
-
-        </p>
+          <p>We invite contributions in all areas network neuroscience, including but not limited to</p>
+          <ul align="left">
+  <li>Brain -omics networks</li>
+<li>Structural brain networks</li>
+<li>Functional brain networks</li>
+<li>Network theory, modeling and analysis</li>
+<li>Network communication and information flow</li>
+<li>Circuit dynamics</li>
+<li>Brain-behavior interactions</li>
+<li>Systems neuroscience</li>
+<li>Fundamental and clinical neuroscience applications</li>
+<li>Brain-body network science</li>
+<li>Classical and deep learning for brain networks</li>
+<li>Spatio-temporal brain network models</li>
+          </ul>
+<p>&nbsp;</p>
+<p>Please submit your abstract by the 3rd of April 2023, midnight&nbsp; Anywhere on Earth. Submissions should be in the format of a one-page pdf with one figure</p>
+<p>&nbsp;&nbsp;</p>
+<p>Please note that as per the rules of the NetSci conference, you may not deliver the same oral presentation in this satellite as at the main conference. Posters, however, may be presented at the satellite and at the main conference if appropriate.</p>
+<p>&nbsp;</p>
+<p>Communication of accepted submissions and invitations for oral “contributed talks” will be sent by April 21st. <br>
+  <br>
+  <br>
+  <!-- Submissions are now closed, but last minute submissions may be accepted on a rolling basis as a POSTER ONLY. Submissions received after July 8th will not be considered.-->
+</p>
         </div>
 
 
@@ -151,14 +164,14 @@
             <div class="row justify-content-center">
             <div class="portfolio-wrap">
 
-              <figure>
+              <!-- <figure>
                 <img src="assets/img/just_brain.jpg" class="img-fluid" alt="">
                 <a href="https://easychair.org/conferences/?conf=nn2023" class="link-details" title="Submit"><i class="bx bx-link"></i></a>
-              </figure>
+              </figure> -->
 
               <div class="portfolio-info">
-                <h4><a href="https://easychair.org/conferences/?conf=nn2023">Submit</a></h4>
-                <p>XXXX POSTER ONLY: July 8th 11:59pm AOE</p>
+                <h4><a href="#">Submit</a></h4>
+                <p>The submission site will open soon</p>
               </div>
             </div>
           </div>
