added link to NetSci

--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
 
         <div class="section-title">
           <h2>Schedule</h2>
-          <p> Network Neuroscience 2023 will be held in Wien, as a satellite of the Network Science conference. The one-day satellite will take place on site on
+          <p> Network Neuroscience 2023 will be held in Vienna, Austria, as a satellite of the <a href="https://netsci2023.wixsite.com/netsci2023">International School and Conferenc eon Network Science</a> (NetSci 2023). The one-day satellite will take place on site on
 the 10th or 11th of July (TBC).&nbsp;&nbsp;The tentative schedule will be as follows:</p>
           <p>&nbsp;</p>
 <table width="80%" border="1" align="center">
@@ -245,7 +245,7 @@ the 10th or 11th of July (TBC).&nbsp;&nbsp;The tentative schedule will be as fol
 </table>
 			
 			<p>Each session will include an invited long talk and several contributed short talks, as well as a panel discussion</p>
-			<br/>
+		  <br/>
 <p style="background-color:#DCDCDC">
 
 	    The exact schedule will be announced after submissions are reviewed. 
