--- a/index.html
+++ b/index.html
@@ -339,14 +339,14 @@ the 10th or 11th of July (TBC).&nbsp;&nbsp;The tentative schedule will be as fol
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
             <div class="member">
               <img src="assets/img/speaker1.png" alt="">
-              <h4>????</h4>
-              <span>Title</span>
+              <h4>Islem Rekik</h4>
+              <span>Director, BASIRA Lab, Assoc. Professor at Imperial College London (I-X Hub)</span>
               <p>
-                 Affiliation
+                 Imperial College
               </p>
               <div class="social">
-                <a href="https://twitter.com/"><i class="bi bi-twitter"></i></a>
-                <a href="https://"><i class="bx bx-link"></i></a>
+                <!-- <a href="https://twitter.com/"><i class="bi bi-twitter"></i></a> -->
+                <a href="https://basira-lab.com/"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
@@ -355,10 +355,10 @@ the 10th or 11th of July (TBC).&nbsp;&nbsp;The tentative schedule will be as fol
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
             <div class="member">
               <img src="assets/img/speaker1.png" alt="">
-              <h4>????</h4>
-              <span>Title</span>
+              <h4>Stein Silva</h4>
+              <span>Professor</span>
               <p>
-                 Affiliation
+                 Toulouse Neuroimaging Center, INSERM, Purpan University Hospital
               </p>
               <div class="social">
                 <a href="https://twitter.com/"><i class="bi bi-twitter"></i></a>
@@ -372,7 +372,7 @@ the 10th or 11th of July (TBC).&nbsp;&nbsp;The tentative schedule will be as fol
             <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
             <div class="member">
               <img src="assets/img/speaker1.png" alt="">
-              <h4>?????</h4>
+              <h4>TBA</h4>
               <span>Title</span>
               <p>
                  Affiliation
@@ -391,7 +391,7 @@ the 10th or 11th of July (TBC).&nbsp;&nbsp;The tentative schedule will be as fol
                         <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
             <div class="member">
               <img src="assets/img/speaker1.png" alt="">
-              <h4>????</h4>
+              <h4>TBA</h4>
               <span>Title</span>
               <p>
                  Affiliation
