--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@ the 10th or 11th of July (TBC).&nbsp;&nbsp;The tentative schedule will be as fol
 
         <div class="section-title">
           <h2>Registration</h2>
-          <p>Network Neuroscience is a satellite of the main NetSci conference. You can register for Network Neuroscience through the NetSci website - select "Satellites & School Only" if you only wish to attend Network Neuroscience and other satellites. 
+          <p>Network Neuroscience is a satellite of the main NetSci conference. You can register for Network Neuroscience through the NetSci website - select "Satellites &amp; School Only" if you only wish to attend Network Neuroscience and other satellites. Please not that the early registration deadline is the 1st of May, 2023 
 <br><br>
 <a href="https://aimgroup.eventsair.com/netsci-2023-registrierung/registration/Site/Register">Register here</a>
             
