--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
           <li><a class="nav-link scrollto " href="#schedule">Schedule</a></li>
           <li><a class="nav-link scrollto" href="#speakers">Speakers</a></li>
           <li><a class="nav-link scrollto" href="#register">Register</a></li>
-		  <li><a class="nav-link scrollto" href="#organizers">Register</a></li>
+		  <li><a class="nav-link scrollto" href="#organizers">Organizers</a></li>
           <li class="dropdown"><a href="#"><span>Community</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
               <li><a href="#team">Team</a></li>
