--- a/index.html
+++ b/index.html
@@ -171,8 +171,8 @@
               </figure> -->
 
               <div class="portfolio-info">
-                <h4><a href="#">Submit</a></h4>
-                <p>The submission site will open soon</p>
+                <h4><a href="https://nn2023.sciencesconf.org/">Submit</a></h4>
+                <p>The submission site is available <a href="https://nn2023.sciencesconf.org/">here</a>. You will be asked first to create an account on Sciencesconf.</p>
               </div>
             </div>
           </div>
@@ -361,8 +361,8 @@ the 10th or 11th of July (TBC).&nbsp;&nbsp;The tentative schedule will be as fol
                  Toulouse Neuroimaging Center, INSERM, Purpan University Hospital
               </p>
               <div class="social">
-                <a href="https://twitter.com/"><i class="bi bi-twitter"></i></a>
-                <a href="https://"><i class="bx bx-link"></i></a>
+                <a href="https://www.linkedin.com/in/stein-silva-25112a63/"><i class="bi bi-linkedin"></i></a>
+                <a href="https://tonic.inserm.fr/equipes/stein-silva/"><i class="bx bx-link"></i></a>
               </div>
             </div>
             </div>
@@ -444,8 +444,9 @@ the 10th or 11th of July (TBC).&nbsp;&nbsp;The tentative schedule will be as fol
                 
               </p>
               <div class="social">
-                <a href="https://mistis.inrialpes.fr/people/achard/"><i class="bi bi-twitter"></i></a>
-                <a href="https://twitter.com/sophie_achard_g"><i class="bx bx-link"></i></a>
+		<a href="sophie_achard@mathstodon.xyz"><i class="bi bi-mastodon"></i></a>
+                <a href="https://twitter.com/sophie_achard_g"><i class="bi bi-twitter"></i></a>
+                <a href="http://mistis.inrialpes.fr/people/achard/"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
