link to submission site in english instead of default french

--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
 
               <div class="portfolio-info">
                 <h4><a href="https://nn2023.sciencesconf.org/">Submit</a></h4>
-                <p>The submission site is available <a href="https://nn2023.sciencesconf.org/">here</a>. You will be asked first to create an account on Sciencesconf.</p>
+                <p>The submission site is available <a href="https://nn2023.sciencesconf.org/?lang=en">here</a>. You will be asked first to create an account on Sciencesconf.</p>
               </div>
             </div>
           </div>
