added Luca + affiliation and links

--- a/index.html
+++ b/index.html
@@ -372,14 +372,14 @@ the 10th or 11th of July (TBC).&nbsp;&nbsp;The tentative schedule will be as fol
             <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
             <div class="member">
               <img src="assets/img/speaker1.png" alt="">
-              <h4>TBA</h4>
-              <span>Title</span>
+              <h4>Luca Faes</h4>
+              <span>Associate Professor</span>
               <p>
-                 Affiliation
+                 University of Palermo
               </p>
               <div class="social">
-                <a href="https://twitter.com/kanibansal"><i class="bi bi-twitter"></i></a>
-                <a href="https://sites.google.com/view/kanikabansal"><i class="bx bx-link"></i></a>
+                <!-- <a href="https://twitter.com/kanibansal"><i class="bi bi-twitter"></i></a> -->
+                <a href="http://www.lucafaes.net/"><i class="bx bx-link"></i></a>
               </div>
             </div>
             </div>
