added speaker portraits

--- a/index.html
+++ b/index.html
@@ -338,7 +338,7 @@ the 10th or 11th of July (TBC).&nbsp;&nbsp;The tentative schedule will be as fol
         <div class="row">
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
             <div class="member">
-              <img src="assets/img/speaker1.png" alt="">
+              <img src="assets/img/portrait_Rekik-BASIRA2019_crop.jpg" alt="">
               <h4>Islem Rekik</h4>
               <span>Director, BASIRA Lab, Assoc. Professor at Imperial College London (I-X Hub)</span>
               <p>
@@ -354,7 +354,7 @@ the 10th or 11th of July (TBC).&nbsp;&nbsp;The tentative schedule will be as fol
 
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
             <div class="member">
-              <img src="assets/img/speaker1.png" alt="">
+              <img src="assets/img/portrait_Silva.jpg" alt="">
               <h4>Stein Silva</h4>
               <span>Professor</span>
               <p>
@@ -371,7 +371,7 @@ the 10th or 11th of July (TBC).&nbsp;&nbsp;The tentative schedule will be as fol
 
             <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
             <div class="member">
-              <img src="assets/img/speaker1.png" alt="">
+              <img src="assets/img/portrait_Faes_sciforum.jpeg" alt="">
               <h4>Luca Faes</h4>
               <span>Associate Professor</span>
               <p>
