--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
         <div class="row">
           <div class="col-lg-6">
             <br>
-            <img src="assets/img/just_brain.jpg" class="img-fluid" alt="">
+            <img src="assets/img/braingraph_ranks.png" class="img-fluid" alt="">
           </div>
           <div class="col-lg-6 pt-4 pt-lg-0">
             <br>
@@ -354,7 +354,7 @@ the 10th or 11th of July (TBC).&nbsp;&nbsp;The tentative schedule will be as fol
 
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
             <div class="member">
-              <img src="assets/img/portrait_Silva.jpg" alt="">
+              <img src="assets/img/portrait_Silva_larger.jpg" alt="">
               <h4>Stein Silva</h4>
               <span>Professor</span>
               <p>
