added twitter for Olaf and Emma

--- a/index.html
+++ b/index.html
@@ -466,7 +466,7 @@ the 10th or 11th of July (TBC).&nbsp;&nbsp;The tentative schedule will be as fol
                 
               </p>
               <div class="social">
-                <!-- <a href="https://twitter.com/TranslationalML"><i class="bi bi-twitter"></i></a> -->
+                <a href="https://twitter.com/@spornslab"><i class="bi bi-twitter"></i></a>
                 <a href="https://psych.indiana.edu/faculty-staff/faculty/sporns-olaf.html"><i class="bx bx-link"></i></a>
               </div>
             </div>
@@ -481,7 +481,7 @@ the 10th or 11th of July (TBC).&nbsp;&nbsp;The tentative schedule will be as fol
                 
               </p>
               <div class="social">
-                <!-- <a href="https://twitter.com/"><i class="bi bi-twitter"></i></a> -->
+                <a href="https://twitter.com/towlsonek"><i class="bi bi-twitter"></i></a>
                 <a href="https://emmatowlson.github.io/"><i class="bx bx-link"></i></a>
               </div>
             </div>
