updated programme, added Luca's bio in comment for now

--- a/index.html
+++ b/index.html
@@ -206,33 +206,41 @@ the 10th or 11th of July (TBC).&nbsp;&nbsp;The tentative schedule will be as fol
       <td>9:00-9:05</td>
       <td>Opening and welcome remarks </td>
     </tr>
-	  <tr>
-      <td>9:05-10:30</td>
-      <td>Session1:&nbsp;Spatio-temporal and dynamic brain networks </td>
+	  <tr bgcolor="lightgray">
+      <td valign="top">9:05-10:30</td>
+      <td><p><strong>Session1:&nbsp;Spatio-temporal and dynamic brain networks </strong></p>
+        <p>Invited talk: TBD</p>
+		<p>Contributed talks: TBD</p> </td>
     </tr>
     <tr>
       <td>10:30-11:00</td>
       <td>Coffee break</td>
     </tr>
-    <tr>
-      <td>11:00-12:15</td>
-      <td>Session 2: Fundamental and clinical neuroscience applications</td>
+    <tr bgcolor="lightgray">
+      <td valign="top">11:00-12:15</td>
+      <td><p><strong>Session 2: Fundamental and clinical neuroscience applications</strong></p>
+        <p>Invited talk: Stein Silva</p>
+		<p>Contributed talks: TBD</p></td>
     </tr>
     <tr>
       <td>12:15-14:00</td>
       <td>Lunch break + posters</td>
     </tr>
-    <tr>
-      <td>14:00-15:30</td>
-      <td>Session 3: Classical and Deep Machine Learning on brain networks</td>
+    <tr bgcolor="lightgray">
+      <td valign="top">14:00-15:30</td>
+      <td><p><strong>Session 3: Classical and Deep Machine Learning on brain networks</strong></p>
+        <p>&nbsp;Invited talk: Islem Rekik</p>
+		<p>Contributed talks: TBD</p></td>
     </tr>
     <tr>
       <td>15:30-16:00</td>
       <td>Coffee break</td>
     </tr>
-    <tr>
-      <td>16:00-17:25</td>
-      <td>Session 4: Brain-body networks</td>
+    <tr bgcolor="lightgray">
+      <td valign="top">16:00-17:25</td>
+      <td><p><strong>Session 4: Brain-body networks</strong></p>
+        <p>Invited talk: Luca Faes,&nbsp;Information-theoretic assessment of complex dynamic interactions in brain and physiological networks</p>
+		<p>Contributed talks: TBD</p></td>
     </tr>
     <tr>
       <td>17:25-17:30</td>
@@ -371,7 +379,7 @@ the 10th or 11th of July (TBC).&nbsp;&nbsp;The tentative schedule will be as fol
 
             <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
             <div class="member">
-              <img src="assets/img/portrait_Faes_sciforum.jpeg" alt="">
+              <img src="assets/img/portrait_Faes_20201025_162956_crop.jpg" alt="">
               <h4>Luca Faes</h4>
               <span>Associate Professor</span>
               <p>
@@ -381,7 +389,27 @@ the 10th or 11th of July (TBC).&nbsp;&nbsp;The tentative schedule will be as fol
                 <!-- <a href="https://twitter.com/kanibansal"><i class="bi bi-twitter"></i></a> -->
                 <a href="http://www.lucafaes.net/"><i class="bx bx-link"></i></a>
               </div>
+				<!-- Luca Faes is Professor of Biomedical Engineering at the University of
+Palermo, Italy, where he teaches courses on Statistical Analysis of
+Biomedical Signals, Biosensors and Biomedical Devices. He has
+previously been with the Department of Physics of the University of
+Trento, Italy, and visiting scientist at the State University of New
+York, Worcester Polytechnic Institute, University of Gent, University
+of Minas Gerais, and Boston University. Dr. Faes is Senior Member of
+the IEEE, member of the IEEE Engineering in Medicine and Biology
+Society (IEEE-EMBS) and of the Technical Committee of Biomedical
+Signal Processing, and member of the European Study Group on
+Cardiovascular Oscillations (ESGCO). He is Specialty Chief Editor for
+Frontiers in Network Physiology, and Associate Editor for IEEE
+Transactions on Biomedical Engineering and Entropy. His research
+focuses on multivariate time series analysis and information theory
+applied to cardiovascular neuroscience, brain connectivity,
+brain-heart interactions, and network physiology. Within these fields,
+he co-authored eight book chapters and more than ~250 peer-reviewed
+publications, receiving >6000 citations (h-index: 46; font: Scholar). -->
+
             </div>
+				
             </div>
 
             <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
