--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
         <div class="section-title">
           <h2>Schedule</h2>
           <p> Network Neuroscience 2023 will be held in Vienna, Austria, as a satellite of the <a href="https://netsci2023.wixsite.com/netsci2023">International School and Conferenc eon Network Science</a> (NetSci 2023). The one-day satellite will take place on site on
-the 10th or 11th of July (TBC).&nbsp;&nbsp;The tentative schedule will be as follows:</p>
+the <strong>10th July</strong> .&nbsp;&nbsp;The tentative schedule will be as follows:</p>
           <p>&nbsp;</p>
 <table width="80%" border="1" align="center">
   <tbody>
