--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
   <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
     <div class="container text-center text-md-left" data-aos="fade-up">
       <h1>Welcome to <span>Network Neuroscience 2023</span></h1>
-      <h2>NetSci 2023 affiliated satellite</h2>
+      <h2>NetSci 2023 affiliated satellite - Vienna, July 10th, 2023</h2>
       <!-- <a href="#about" class="btn-get-started scrollto">Get Started</a> -->
     </div>
   </section><!-- End Hero -->
