added ignore for mac resources

--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@ the <strong>10th July</strong> .&nbsp;&nbsp;The tentative schedule will be as fo
     <tr bgcolor="lightgray">
       <td valign="top">11:00-12:15</td>
       <td><p><strong>Session 2: Fundamental and clinical neuroscience applications</strong></p>
-        <p>Invited talk: Stein Silva</p>
+        <p>Invited talk: Stein Silva - Structural, functional and molecular neuroimaging as an assessment tool for coma patients</p>
 		<p>Contributed talks: TBD</p></td>
     </tr>
     <tr>
@@ -239,7 +239,7 @@ the <strong>10th July</strong> .&nbsp;&nbsp;The tentative schedule will be as fo
     <tr bgcolor="lightgray">
       <td valign="top">16:00-17:25</td>
       <td><p><strong>Session 4: Brain-body networks</strong></p>
-        <p>Invited talk: Luca Faes,&nbsp;Information-theoretic assessment of complex dynamic interactions in brain and physiological networks</p>
+        <p>Invited talk: Luca Faes - Information-theoretic assessment of complex dynamic interactions in brain and physiological networks</p>
 		<p>Contributed talks: TBD</p></td>
     </tr>
     <tr>
@@ -368,6 +368,7 @@ the <strong>10th July</strong> .&nbsp;&nbsp;The tentative schedule will be as fo
               <p>
                  Toulouse Neuroimaging Center, INSERM, Purpan University Hospital
               </p>
+			  <p></p>
               <div class="social">
                 <a href="https://www.linkedin.com/in/stein-silva-25112a63/"><i class="bi bi-linkedin"></i></a>
                 <a href="https://tonic.inserm.fr/equipes/stein-silva/"><i class="bx bx-link"></i></a>
